--- a/fs/proc/Makefile
+++ b/fs/proc/Makefile
@@ -32,3 +32,5 @@ proc-$(CONFIG_PROC_KCORE)	+= kcore.o
 proc-$(CONFIG_PROC_VMCORE)	+= vmcore.o
 proc-$(CONFIG_PRINTK)	+= kmsg.o
 proc-$(CONFIG_PROC_PAGE_MONITOR)	+= page.o
+
+proc-$(CONFIG_WXC_LINUX_PROC_DIRECTORY) += wxc_proc_root.o
