WXCL: Add third-party features BBSWITCH
* Description: BBSWITCH is a kernel module which automatically detects
                the required ACPI calls for Optimus laptops.
                From: https://github.com/Bumblebee-Project/bbswitch/tree/develop
                Commit: 9dd227019aac8f125e04befa2c0b1bf0624be482
                Update: 17 July, 2017
* add config WXC_LINUX_BBSWITCH_SUPPORT

--- a/drivers/acpi/Makefile
+++ b/drivers/acpi/Makefile
@@ -112,3 +112,6 @@ video-objs			+= acpi_video.o video_detect.o
 obj-y				+= dptf/
 
 obj-$(CONFIG_ARM64)		+= arm64/
+
+# WXCL
+obj-$(CONFIG_WXC_LINUX_BBSWITCH_SUPPORT) += bbswitch.o
